updated acks in spec
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13821 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Acknowledgments.tex
+++ b/spec/Acknowledgments.tex
@@ -1,13 +1,25 @@
 \sekshun{Acknowledgments}
 \label{Acknowledgments}
 
-We would like to recognize the following people for their efforts and
-impact on the Chapel language and its implementation---David Callahan,
-Hans Zima, John Plevyak, Shannon Hoffswell, Roxana Diaconescu, Mark
-James, Mackale Joyner, Robert Bocchino, and James Dinan.
+The following people have contributed to the design of the Chapel
+language:
+Robert Bocchino,
+David Callahan,
+Bradford Chamberlain,
+Steven Deitz,
+Roxana Diaconescu,
+James Dinan,
+Samuel Figueroa,
+Shannon Hoffswell,
+Mary Beth Hribar,
+David Iten,
+Mark James,
+Mackale Joyner,
+John Plevyak,
+and Hans Zima.
 
 Chapel is a derivative of a number of parallel and distributed
-languages and takes ideas directly from them.  These include the MTA
+languages and takes ideas directly from them, especially the MTA
 extensions of C, HPF, and ZPL.
 
 Chapel also takes many serial programming ideas from many other
